--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev:client": "cd client && vite",
     "dev:server": "cd server && nodemon server.cjs",
     "dev": "concurrently \"npm run dev:client\" \"npm run dev:server\"",
-    "start": "cd server && node server.cjs" // Add this line
+    "start": "concurrently \"cd server && node server.cjs\" \"cd client && vite\""
   },
   "dependencies": {
     "@emotion/react": "^11.13.3",
