--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "bcrypt": "^5.1.1",
     "dayjs": "^1.11.13",
     "dotenv": "^16.4.5",
+    "express": "^4.21.0",
     "express-session": "^1.18.0",
     "framer-motion": "^11.7.0",
     "mongoose": "^8.6.3",
@@ -43,6 +44,7 @@
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.3.1",
+    "autoprefixer": "^10.4.20",
     "concurrently": "^7.6.0",
     "eslint": "^9.9.0",
     "eslint-plugin-react": "^7.35.0",
