--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-calendar": "^5.0.0",
     "react-datetime-picker": "^6.0.1",
     "react-dom": "^18.3.1",
+    "react-loading": "^2.0.3",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.2",
     "react-type-animation": "^3.2.0",
